[package]
name = "escalate"
version = "0.1.0"
edition = "2021"


[dependencies]
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
bip39 = { version = "2.1.0", features = ["japanese", "rand", "unicode-normalization"] }
bitcoin = "0.32.5"
clap = { version = "4.5.37", features = ["derive"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
